// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly 1`] = `
<main
  className="content"
/>
`;

exports[`rendering renders correctly with children 1`] = `
<main
  className="content"
>
  <div>
    test
  </div>
</main>
`;
